Fix alignment on login and logout pages

--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -50,10 +50,11 @@
 
 
 .LoginErrorDiv {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.597);
   color: #d63b3b;
   text-align: center;
   padding: 1rem 0;
+  border-radius: 5px;
 }
 .LoginFeedBackDiv {
   background-color: rgba(255, 255, 255, 0.5);
